--- a/package.json
+++ b/package.json
@@ -1,4 +1,3 @@
-
 {
   "name": "ginza-order-portal",
   "private": true,
@@ -12,7 +11,7 @@
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
     "@supabase/supabase-js": "^2.46.1",
-    "framer-motion": "^11.11.11",
+    "framer-motion": "^12.0.0",
     "lucide-react": "^0.460.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
@@ -26,7 +25,8 @@
     "autoprefixer": "^10.4.20",
     "postcss": "^8.4.49",
     "tailwindcss": "^3.4.15",
-    "typescript": "^5.6.3",
-    "vite": "^6.0.0"
+    "typescript": "^5.7.2",
+    "vite": "^6.0.0",
+    "@vitejs/plugin-react": "^4.3.4"
   }
 }
